# oracle

./: .env.example  .gitignore  README.md  backtest_results.json  docker-compose.yml  pyproject.toml  results.json
docker/: Dockerfile  prometheus.yml
docker/grafana/dashboards/: oracle.json
frontend/: index.html  package.json  vite.config.ts
frontend/src/api/: client.ts
scripts/: backtest.py  benchmark_retrieval.py  generate_report.py  generate_training_data.py  run_training.py
src/oracle/: __init__.py  config.py
src/oracle/agents/: __init__.py  base.py  cache.py  messages.py  paper_trading.py  portfolio_manager.py  quantitative.py  reflection.py  research.py  risk.py
src/oracle/api/: app.py  streaming.py
src/oracle/cache/: __init__.py  semantic_cache.py
src/oracle/evaluation/: __init__.py  backtest_metrics.py  calibration.py  gates.py  hallucination.py  judge.py  post_mortem.py  post_resolution.py
src/oracle/ingestion/: audio_ingestion.py  chunker.py  entity_resolver.py  gov_scrapers.py  news_pipeline.py  polling_scrapers.py  polymarket_client.py  reddit_client.py  scheduler.py  twitter_client.py  vision_ingestion.py
src/oracle/knowledge/: embeddings.py  neo4j_client.py  qdrant_client.py
src/oracle/models/: __init__.py
src/oracle/observability/: __init__.py  metrics.py  tracer.py
src/oracle/prompts/: __init__.py  ab_testing.py  registry.py
tests/: test_agents.py  test_evaluation.py  test_ingestion_expansion.py  test_optimization.py  test_retrieval.py
tests/unit/: test_chunker.py  test_entity_resolver.py  test_polymarket.py
(+29 files in other folders)
