[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oracle"
version = "0.1.0"
description = "Autonomous AI prediction engine for Polymarket"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Akhil Chilaka" },
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "neo4j>=5.19.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=2.6.0",
    "spacy>=3.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "anthropic>=0.25.0",
    "numpy>=1.26.0",
    "aiosqlite>=0.20.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "tiktoken>=0.6.0",
    "modal>=0.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
